[project]
name = "control-jax"
version = "0.1.0"
description = "A JAX library for data-driven model predictive control."
readme = "README.md"
authors = [
    { name = "GStechschulte", email = "gabriel.stechschulte@hslu.ch" }
]
requires-python = ">=3.12.5"
dependencies = []

[project.scripts]
control-jax = "control_jax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
